--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ html,body{
 font-family: Georgia, serif;
 color: #191970;
 }
+.display-1{
+  font-family: serif;
+}
+.mb-0{
+  color: #191970;
+  font-weight: bold;
+  font-size: 2rem;
+}
 .carousel img{
   width:100%;
   height:100%;
