--- a/style.css
+++ b/style.css
@@ -1,30 +1,63 @@
 html,body{
-font-family: Georgia, serif;
+font-family: sans-serif;
 color: #191970;
 }
-.display-1{
-  font-family: serif;
+.nav-link{
+  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
+  font-size: 1.2rem;
 }
-.mb-0{
-  color: #191970;
-  font-weight: bold;
+.display-4{
+  font-family: sans-serif;
+  font-size: 2.5rem;
+  color:#191970;
+}
+.lead{
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  color:	#800080;
+}
+.card-title{
+  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
   font-size: 2rem;
+  color:#191970;
+}
+.card-text{
+  font-family: sans-serif;
+  font-size: 1.2rem;
+  color:#800080;
 }
 .carousel img{
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
 }
-.button-info{
-  background-color:#9932CC;
-  border:1px solid #9932CC;
+.btn-primary{
+  background-color:	#DDA0DD;
+  border: 1px solid #DDA0DD;
 }
-.button-info:hover{
+.btn-primary:hover{
   background-color: #8B008B;
-  border:1px solid #8B008B;
+  border: 1px solid #8B008B;
+}
+.btn-outline-danger{
+  color:#F8F8FF;
+  background-color: #F08080;
+  border: 1px solid #F08080;
+  width: 10em;
+  height: 4em;
+}
+.btn-outline-secondary{
+  color:#F8F8FF;
+  background-color: #FFB6C1;
+  border: 1px solid #FFB6C1;
+
+}
+.btn-outline-secondary:hover{
+  background-color: 	#FF69B4;
+  border: 1px solid 	#FF69B4;
 }
 .fun{
   width: 100%;
-  margin: 2rem;
+  margin-bottom: 2rem;
 }
 .gif{
   max-width: 100%;
@@ -33,30 +66,42 @@ color: #191970;
   font-size: 4.5rem;
   padding: 3rem;
   }
-.fa-facebook{
-  color: #00008B;
+  .fa-facebook{
+    color:#5b5998;
   }
   .fa-twitter{
-    color: #00BFFF;
-    }
-    .fa-google{
-      color: #FF0000;
-      }
-      .fa-instagram{
-        color: #6A5ACD;
-        }
-        .fa-youtube{
-          color: #8B0000;
-          }
-.fa-facebook:hover,.fa-twitter:hover,.fa-instagram:hover,.fa-google:hover,.fa-youtube:hover{
-  color:#FFE4C4;
-}
-.footer{
-  background-color: #A9A9A9;
-  color:#F0FFFF;
-  padding-top: 2rem;
-}
-.light{
-  border-top: 1px solid #d5d5d5;
-  width: 75%;
-}
+    color:#00aced;
+  }
+  .fa-google-plus-g{
+    color:#dd4b39;
+  }
+  .fa-instagram{
+    color:#517fa4;
+  }
+  .fa-youtube{
+    color:#bb0000;
+  }
+  .fa-facebook:hover, .fa-twitter:hover, .fa-instagram:hover, .fa-google-plus-g:hover, .fa-youtube:hover{
+    color:#FFE4C4;
+  }
+  .fa-fire{
+    font-size: 3rem;
+    color:#D02090;
+  }
+  .fa-paper-plane{
+    font-size: 3rem;
+    color:#FF69B4;
+  }
+  .fa-comments{
+    font-size: 3rem;
+    color:#FA8072;
+  }
+  .footer{
+    background-color: #A9A9A9;
+    color:#F0FFFF;
+    padding-top: 2rem;
+  }
+  .light{
+    border-top: 1px solid #d5d5d5;
+    width: 75%;
+  }
